--- a/RankFit/Info.plist
+++ b/RankFit/Info.plist
@@ -18,6 +18,11 @@
 		<string>kakaokompassauth</string>
 		<string>kakaolink</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSLocationDefaultAccuracyReduced</key>
 	<false/>
 	<key>UIApplicationSceneManifest</key>
